--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "async": "^3.2.0",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.6.1",
@@ -23,6 +25,8 @@
     "make-dir": "^3.1.0",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.6",
+    "uuid": "^8.3.1"
   }
 }
