--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "json2csv": "^5.0.5",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "make-dir": "^3.1.0",
