--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "make-dir": "^3.1.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.11",
