--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
+    "email-validator": "^2.0.4",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.6.1",
@@ -29,6 +30,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.6",
+    "password-validator": "^5.1.1",
     "uuid": "^8.3.1"
   }
 }
