--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
+    "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.6",
     "password-validator": "^5.1.1",
     "uuid": "^8.3.1"
-  }
+  },
+  "devDependencies": {}
 }
