--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.15",
     "async": "^3.2.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
