--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
     "node-geocoder": "^3.27.0",
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.6",
