--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jimp": "^0.16.1",
     "json2csv": "^5.0.5",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
