--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.6",
     "password-validator": "^5.1.1",
+    "stripe": "^8.137.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {}
